--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^4.9.4",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
