--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.9.4",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
