--- a/public/rapp/package.json
+++ b/public/rapp/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "google-map-react": "^0.24.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-responsive-carousel": "^3.1.15"
   },
   "scripts": {
     "start": "react-scripts start",
