--- a/public/rapp/package.json
+++ b/public/rapp/package.json
@@ -9,6 +9,7 @@
     "google-map-react": "^0.24.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-hover-observer": "^1.1.1",
     "react-responsive-carousel": "^3.1.15"
   },
   "scripts": {
