--- a/public/rapp/package.json
+++ b/public/rapp/package.json
@@ -10,7 +10,9 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hover-observer": "^1.1.1",
-    "react-responsive-carousel": "^3.1.15"
+    "react-responsive-carousel": "^3.1.15",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
