Revert "build react app on prod"
This reverts commit 2575379

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm install -g create-react-app && cd ./public/rapp && npm run build && cd ../../ && node ./bin/www",
+    "start": "cd ./public/rapp && npm run build && cd ../../ && node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
